# geometric-quad-control

./: CMakeLists.txt  README.md  compile_commands.json  data.txt  python3  shell.nix
include/: controller.h  ekf.h  simulator.h  teleop.h
mavic_sim/protos/: Mavic2Pro.proto
mavic_sim/worlds/: .mavic_2_pro.wbproj  .mavic_2_proto_2.wbproj  mavic_2_pro.wbt  mavic_2_proto_2.wbt
scripts/: data.txt  debug3d.py  realtime.py  vis.py
src/: controller.cpp  demo.cpp  ekf.cpp  main.cpp
